--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -23,7 +23,8 @@
 流觞曲水兰亭趣
 车鼓宴游金谷迷......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 12:26 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182326.md#1" target="_blank">新诗：诗</a><br></h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182326.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13082787-190523021635100093-150x120.jpg" align ="left"></a>它含着光路过 人能感知它的璀璨 天平的理性下 婉转地表达意象 就像太阳喷薄而出时 云雾的尽散......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 12:26 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182403.md#1" target="_blank">青松絮语：是云是山</a><br></h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182403.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_502408657-150x120.jpg" align ="left"></a>那一刻，突然意识到，是云是山，并不重要。重要的是，远处的风景在某时某刻曾经让人心生向往，让人思索。而答案到底是什么，也许没有绝对的对与错，而我们只是在求索的路上，一步步更接近真理……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月23日 11:28 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189951.md#1" target="_blank">诗歌：折腾（二首）</a><br></h3> 神旨布流疫， 抗天胡折腾。 强抻麻更乱， 封堵疫难轻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月27日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189981.md#1" target="_blank">五律：坏事干绝</a><br></h3>恨不国人死， 何如中共邪。 脑中装马列， 衣内罩花蛇。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月27日 12:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/25/n13186044.md#1" target="_blank">神韵行（七十八）</a><br></h3>抚槛思， 依栏话， 且去长安看繁华。 仙姿暂许人间化。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月26日 12:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/25/n13187197.md#1" target="_blank">诗歌：上天要你归善（外一首）</a><br></h3>魔高一尺动， 道长万寻升。 疫苗还难定， 变种却流行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月26日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/25/n13187196.md#1" target="_blank">歌词：异国思乡</a><br></h3>每当异国洒满了月光，我便思念遥远的故乡。 仿佛又看到阿爸坚毅的背影，阿妈美丽、慈祥的脸庞。 他乡再好也不是我的家，神乡父老您可安康？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月25日 11:23 PM			</td></tr>
@@ -34,6 +35,5 @@
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182533.md#1" target="_blank">作文选登：东京奥运会对我的启示</a><br></h3>这次的东京奥运，让我在做人处事上有了很大的启发。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 1:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182493.md#1" target="_blank">作文选登：我最爱的一首词</a><br></h3>我寄托了苏轼情感的诗词，也会继续承载着那份思念，永久流传下去。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 12:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182366.md#1" target="_blank">五律：初秋林园</a><br></h3> 林园留叶碧， 秋日意迟迟。 分羽核桃树， 垂丝杨柳枝。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 12:26 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/23/n13182324.md#1" target="_blank">新诗：中元阅山纪</a><br></h3>涉过浓浓的梦境 来到薄雾的清晨 扬起枴杖，揭开山的睡眼 踽踽上山  昧旦在林间......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月24日 12:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dyxikb312/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/dyxikb312/djy/blob/master/gb/news2007_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dyxikb312/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_3.htm">https://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://github.com/dyxikb312/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
